2020-11-14 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests
    
    * comments
    
    * FDM refactorization



2020-10-10 Marek M. Cel <marekcel@marekcel.pl>

    * oscillations analysis class



2020-10-03 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests
    
    * winch launcher model
    
    * input data as data referneces
    
    * wind



2020-09-27 Marek M. Cel <marekcel@marekcel.pl>

    * wing runners model
    
    * Geom class with intersections common functions
    
    * F-35 FDM



2020-09-19 Marek M. Cel <marekcel@marekcel.pl>

    * PW-5 FDM
    
    * CGI new airbrakes



2020-09-05 Marek M. Cel <marekcel@marekcel.pl>

    * cylinder head temperature
    
    * FDM wrapper
    
    * Matrix3x3 items referneces
    
    * input data as data referneces
    
    * static friction model fix
    
    * custom map container
    
    * FDM manager moved to the fdm directory
    
    * stabilizer base model separated into horizontal and vertical stabilizer models
    
    * main rotor default model based on momentum theory, blade element model as auxiliary



2020-08-22 Marek M. Cel <marekcel@marekcel.pl>

    * Table1 and Table2 renamed
    
    * afterburner flame
    
    * landmarks 3D objects



2020-08-16 Marek M. Cel <marekcel@marekcel.pl>
    
    * intersections error fix



2020-08-15 Marek M. Cel <marekcel@marekcel.pl>
    
    * data references restored
    
    * freezing position, attitude and velocity integration



2020-08-09 Marek M. Cel <marekcel@marekcel.pl>
    
    * landing gear changes, external wheel model used
    
    * water reflections
    
    * HUD default color changed
    
    * static friction



2020-08-01 Marek M. Cel <marekcel@marekcel.pl>
    
    * n-element dynamic allocated vector class
    
    * wheel model moved to its own class
    
    * variable size aircraft state vector
    
    * CGI entities



2020-07-25 Marek M. Cel <marekcel@marekcel.pl>
    
    * AW101, F-35A and R44 FDM
    