@@ -43,6 +43,10 @@ public:
 
     /** Destructor. */
     virtual ~Input();
+
+private:
+
+    void init();
 };
 
 } // end of fdm namespace
