@@ -1,3 +1,9 @@
+2020-11-15 Marek M. Cel <marekcel@marekcel.pl>
+
+    * landing gear static friction model fix
+
+
+
 2020-11-14 Marek M. Cel <marekcel@marekcel.pl>
 
     * unit tests
